src/style.css
/* Custom font - Poppins */
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500&family=Roboto:wght@300;500&display=swap');

/* Declare some variables */
:root {
    --gradient-color-1: #fb41f8;
    --gradient-color-2: #7c78ff;
    --translucent-bg-color: rgba(100, 100, 100, 0.1);
}

html {
    height: 100%;
    width: 100%;
    background-color: #1c0c2e;
}

body {
    font-family: 'Poppins';
}

.divider {
    margin: 20px 20px;
    background-color: #454545;
    border: none;
    height: 1px;
}

.project-header {
    display: flex;
    justify-content: space-between;
}

.project-title {
    background: -webkit-linear-gradient(45deg, var(--gradient-color-1), var(--gradient-color-2));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    inline-size: 250px;
    word-break: break-all;
    hyphens: manual;
    font-size: 20px;
    margin-left: 20px;
}

.project-card-title {
    font-size: 20px;
}

.links {
    position: absolute;
    bottom: 0px;
    margin-bottom: 25px;
}

.project-version {
    position: relative;
    color: gray;
    font-size: 16px;
    margin-bottom: -2px;
}

.project-tag {
    margin-top: -10px;
    padding: 8px 10px;
    font-size: 14px;
    border-radius: 20px;
}

.mod-tag {
    border:#708f28 2px solid;
    color: #708f28;
}

.plugin-tag {
    border:#ac3356 2px solid;
    color: #ac3356;
}

.theme-tag {
    border:#9f6527 2px solid;
    color: #9f6527;
}

.website-tag {
    border:#279f77 2px solid;
    color: #279f77;
}

.project-description {
    color: #adadad;
    line-height: 24px;
    margin: 0px 20px;
    max-width: 400px;
    font-weight: 300;
}

.project-link {
    color: #3f8bee;
    text-decoration: none;
    margin: 30px 20px 20px 20px;
}

.project-footer {
    display: flex;
    justify-content: space-between;
    margin: 50px 20px 20px 20px;
}

.spacer {
    flex: 1;
}

.pg-title {
    color: white;
    font-size: 28px;
    width: 100%;
    text-align: center;
}

#project-list {
    display: grid;
}

.project-view {
    background-color: var(--translucent-bg-color);
    margin: 18px;
    border-radius: 20px;
    color: #ADADAD;
    display: flex;
    flex-direction: column;
}

.back-button {
    margin-left: 20px; 
    font-family: 'Poppins'; 
    font-size: 18px;
}

#view-projects-txt {
    margin-top: 60px;
}

#title {
    color: white;
    font-weight: bold;
    /* 57 for tablets */
    margin-top: -20px;
    margin-bottom: -45px;
    text-align: center;
}

.title-text {
    font-weight: 200;
    font-size: 60px;
    width: 100%;
    text-align: center;
}

#description {
    color: gray;
    font-size: 24px; /* 35px for tablets */
    text-align: center;
    margin-top: -20px;
}

#socials {
    background-color: rgba(100, 100, 200, 0.15);
    padding: 10px;
    border-radius: 20px;
    margin: 20px 0px 20px 20px;
    display: inline-block;
    align-items: center;
}

#main-pg-header {
    width: 100%;
    text-align: center;
}

.project-authors {
    position: relative;
    color: gray;
    margin: 20px;
    margin-top: -1px;
}

.social {
    border-radius: 20px;
    margin: 10px 20px;
    box-shadow: 0px 7px 20px rgba(0, 0, 0, .3);
    transition: transform 0.2s;
}

.social:hover {
    transform: scale(1.1)
}

.link {
    text-decoration: none;
    vertical-align: bottom;
}

#line-view-projects {
    margin-top: -25px;
    margin-bottom: 50px;
    background-color: #454545;
    border: none;
    height: 1px;
}

#view-projects-view {
    display: grid;
    grid-template-columns: 80%;
    gap: 40px;
    justify-content: center;
}

.view-project-card {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color:rgba(100, 100, 100, .1);
    border-radius: 20px;
    padding: 10px 20px;
}

.project-card-title {
    display: inline-block;
    background: -webkit-linear-gradient(45deg, var(--gradient-color-1), var(--gradient-color-2));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-weight: bold;
}

button {
    font-weight: 200;
    display: inline-block;
    background-image: linear-gradient(
        45deg, 
        #CA2CC7, 
        #465FDF
    );
    padding: 15px 25px;
    text-decoration: none;
    color: white;
    font-weight: 100;
    box-shadow: 10px 5px 10px rgba(0, 0, 0, 0.1);
    border-radius: 50px;
    margin: 40px 20px 20px;
    transition: transform 0.2s;
    position: relative;
    border: none;
    font-family: 'Poppins';
    font-size: 16px;
    cursor: pointer;
}

.project-card-button:hover {
    transform: scale(1.05)
}

#output-text {
    color: white;
}

.output-container {
    background:rgba(100, 100, 100, .1);
    padding: 20px;
    border-radius: 20px;
    width: 65%;
    margin: 0 auto;
    text-align: center;
    margin-top: 20px;
}

.tool-title {
    width: 100%;
    text-align: center;
    font-size: 30px;
    margin-top: -20px;
}

.container {
    max-width: 1580px;
    margin: 0 auto;
    padding: 20px 20px 80px;
}

.cite-generator-container {
    position: relative;
    display: flex;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    width: 65%;
    justify-content: center;
    flex-direction: column;
    background:rgba(100, 100, 100, .1);
    border-radius: 20px;
    padding: 20px;
    margin-top: 60px;
}

input {
    display: inline;
    width: 85%;
    padding: 20px;
    border-radius: 20px;
    border: rgba(0, 0, 0, 0);
    background-color: rgba(100, 100, 100, .2);
    font-family: 'Poppins';
    color: white;
    transition: border 0.1s;
}

input:focus {
    outline:none;
    border: 1px solid #CA2CC7;
    border-radius: 20px;
}

#form-container {
    display: grid;
    grid-template-columns: auto;
    gap: 20px;
}

.tool-page-description {
    color: gray;
    text-align: center;
    margin-left: 20px;
    margin-right: 20px;
    margin-top: -10px;
    justify-content: center;
}

/* Tablets */
@media only screen and (min-width: 767px) {
    /* Make page titles smaller if on smaller devices */
    #project-list {
        display: grid;
        grid-template-columns: 50% 50%;
    }
    
    #view-projects-view {
        grid-template-columns: 40% 40%;
    }

    .project-title {
        font-size: 24px;
        inline-size: 300px;
    }

    #title {
        font-size: 80px;
    }
    
    #description {
        font-size: 35px;
        margin-top: -40px;
    }

    .project-card-title {
        font-size: 20px;
    }

    .pg-title {
        font-size: 40px;
    }
}

/* Computers */
@media only screen and (min-width: 1220px) {
    #project-list {
        display: grid;
        grid-template-columns: 33% 34% 33%;
    }    

    #view-projects-view {
        grid-template-columns: 22% 22% 22%;
    }
    
    .project-title {
        inline-size: 300px;
        word-break: break-all;
        hyphens: manual;
        font-size: 24px;
    }

    #form-container {
        grid-template-columns: auto auto;
    }

    .tool-title {
        font-size: 42px;
    }

    .output-container {
        width: 55%;
    }

    .cite-generator-container {
        width: 55%;
    }

    input {
        width: 90%;
    }
    
    .title-text {
        font-size: 80px;
    }
}

